--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.7",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
+    "@angular/core": "^6.0.7",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.0",
     "rxjs": "^6.0.0",
