--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.13",
-    "@angular/common": "~8.2.13",
+    "@angular/animations": "^8.2.13",
+    "@angular/common": "^8.2.13",
     "@angular/compiler": "~8.2.13",
-    "@angular/core": "~8.2.13",
+    "@angular/core": "^8.2.13",
     "@angular/forms": "~8.2.13",
-    "@angular/platform-browser": "~8.2.13",
+    "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
-    "@angular/router": "~8.2.13",
+    "@angular/router": "^8.2.13",
     "ng-zorro-antd": "^8.4.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.17",
