--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "^8.2.13",
+    "echarts": "^4.4.0",
+    "echarts-wordcloud": "^1.1.3",
     "ng-zorro-antd": "^8.4.1",
+    "ngx-echarts": "^4.2.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "^0.9.1"
