--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.8
-    
+
       - name: Cache node modules
         uses: actions/cache@v1
         with:
@@ -27,21 +27,21 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-            
+
       - name: Install dependencies
         run: npm install
       - name: Lint
         run: npm run lint
       - name: Build
         run: npm run build -- --prod
-        
+
       - name: deploy remote
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: "dist/*"
+          source: "dist/*/*"
           target: "digithuman-ui"
           strip_components: 1
 
