--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ng-zorro-antd": "^11.0.2",
     "ngx-echarts": "^6.0.0",
     "rxjs": "^6.6.3",
-    "tslib": "^2.1.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
   },
   "devDependencies": {
@@ -32,20 +32,20 @@
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "^11.1.0",
     "@angular/language-service": "^11.1.0",
-    "@types/jasmine": "~3.6.3",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~14.14.22",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.0.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
-    "tslint": "~6.1.3",
+    "tslint": "~6.1.0",
     "typescript": "^4.1.3"
   }
 }
