--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/router": "^11.1.0",
     "echarts": "^5.0.1",
     "echarts-wordcloud": "^2.0.0",
+    "file-saver": "^2.0.5",
     "ng-zorro-antd": "^11.1.0",
     "ngx-echarts": "^6.0.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.1.0",
+    "xlsx": "^0.17.0",
     "zone.js": "^0.11.3"
   },
   "devDependencies": {
